# The_Rust_Programming_Language

./: Cargo.toml
projects/OOP-1/: Cargo.toml
projects/OOP-1/src/: main.rs
projects/Threads/src/: main.rs
projects/Vectors/src/: main.rs
projects/adder/src/: lib.rs
projects/adder/tests/: common.rs  integrations_tests.rs
projects/blog_oop/src/: lib.rs  main.rs
projects/ccv/: Cargo.toml  build.rs  icon.rc
projects/ccv/src/: main.rs
projects/clothes_shop/: Cargo.toml
projects/clothes_shop/src/: main.rs
projects/convert_F_to_C/: Cargo.toml
projects/convert_F_to_C/src/: main.rs
projects/duplication_with_generics/: Cargo.toml
projects/duplication_with_generics/src/: main.rs
projects/enums_1/src/: main.rs
projects/enums_with_generics/: Cargo.toml
projects/has_maps/: Cargo.toml
projects/hello/: 404.html  hello.html
projects/hello_world/: main.rs
projects/oop_gui/: Cargo.toml
projects/patters_one/: Cargo.toml
projects/practice_vectors_strings_hash/: Cargo.toml
projects/practicing_slices/: Cargo.toml
projects/practicing_structs/: Cargo.toml
projects/shared_traits/: Cargo.toml
projects/structs_with_generics/: Cargo.toml
projects/structs_with_generics_and_implements/: Cargo.toml
projects/the_longest_with_bounds_lifetime_generics/: Cargo.toml
projects/using_trait_bounds_conditionally_implement_methods/: Cargo.toml
zenva/formet_zenva/: Cargo.toml
zenva/functions_zenva/: Cargo.toml
zenva/ownership_zenva/: Cargo.toml
zenva/structs_zenva/: Cargo.toml
zenva/types_zenva/: Cargo.toml
zenva/variables_zenva/: Cargo.toml
(+43 files in other folders)
