[package]
name = "ccv_service_code_generator"
description = "CCV service code generator"
authors = ["Kasper Bosteels"]
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
termcolor = "1.4.1"

[build-dependencies]
winres = "0.1.12"



